@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sun Oct 03 22:02:55 2004 -->
+<!-- generated by wxGlade 0.3.2 on Mon Oct 04 18:08:03 2004 -->
 
 <application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="MiscControlPage" base="EditTopLevelPanel">
@@ -550,6 +550,7 @@
                                                         <object class="wxComboBox" name="PrinterportSelector" base="EditComboBox">
                                                             <style>wxCB_READONLY</style>
                                                             <selection>0</selection>
+                                                            <tooltip>Device to connect to the printerport</tooltip>
                                                             <choices>
                                                                 <choice>choice 1</choice>
                                                             </choices>
@@ -603,15 +604,17 @@
                                                         <border>5</border>
                                                         <option>1</option>
                                                         <object class="wxTextCtrl" name="PrinterLogFile" base="EditTextCtrl">
+                                                            <tooltip>Printer Log File</tooltip>
                                                         </object>
                                                     </object>
                                                     <object class="sizeritem">
-                                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
-                                                        <border>5</border>
+                                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
+                                                        <border>0</border>
                                                         <option>0</option>
-                                                        <object class="wxButton" name="BrowsePrinterLog" base="EditButton">
-                                                            <label>...</label>
-                                                            <size>25, -1</size>
+                                                        <object class="wxBitmapButton" name="BrowsePrinterLog" base="EditBitmapButton">
+                                                            <tooltip>Browse</tooltip>
+                                                            <bitmap>../resources/bitmaps/file.bmp</bitmap>
+                                                            <size>23, 23</size>
                                                         </object>
                                                     </object>
                                                 </object>
