@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sun Oct 03 22:03:35 2004 -->
+<!-- generated by wxGlade 0.3.2 on Mon Oct 04 18:06:29 2004 -->
 
 <application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="VideoControlPage" base="EditTopLevelPanel">
@@ -740,10 +740,10 @@
                                         <flag>wxLEFT|wxRIGHT</flag>
                                         <border>5</border>
                                         <option>0</option>
-                                        <object class="wxButton" name="BrowseScreenShotButton" base="EditButton">
+                                        <object class="wxBitmapButton" name="BrowseScreenShotButton" base="EditBitmapButton">
                                             <tooltip>Browse</tooltip>
-                                            <label>...</label>
-                                            <size>25, -1</size>
+                                            <bitmap>../resources/bitmaps/file.bmp</bitmap>
+                                            <size>23, 23</size>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
