@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.85 2004/10/03 17:02:11 h_oudejans Exp $
+$Id: ChangeLog,v 1.86 2004/10/03 20:08:25 h_oudejans Exp $
+
+2004-10-04 Herman Oudejans
+	* Browse file buttons are now picture buttons
+	* Catapult now sends an 'unplug' before sending 'plug'
+	* Minor clean ups.
 
 2004-10-03 Herman Oudejans
 	* Joystick settings are now saved.
